--- a/BoardTest.ioc
+++ b/BoardTest.ioc
@@ -671,10 +671,12 @@ SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI3.CalculateBaudRate=96.0 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI3.CLKPolarity=SPI_POLARITY_HIGH
+SPI3.CalculateBaudRate=3.0 MBits/s
+SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPolarity
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 SYS.userName=SYS_M7
