--- a/BoardTest.ioc
+++ b/BoardTest.ioc
@@ -50,8 +50,9 @@ Mcu.IP15=SYS_M4
 Mcu.IP16=SYS
 Mcu.IP17=TIM3
 Mcu.IP18=UART5
-Mcu.IP19=USB_OTG_FS
+Mcu.IP19=USB_DEVICE_M7
 Mcu.IP2=CORTEX_M4
+Mcu.IP20=USB_OTG_FS
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DAC1
 Mcu.IP5=DEBUG
@@ -59,7 +60,7 @@ Mcu.IP6=ETH
 Mcu.IP7=FATFS_M7
 Mcu.IP8=I2C1
 Mcu.IP9=NVIC1
-Mcu.IPNb=20
+Mcu.IPNb=21
 Mcu.Name=STM32H745BITx
 Mcu.Package=LQFP208
 Mcu.Pin0=PI10
@@ -135,9 +136,10 @@ Mcu.Pin71=VP_FATFS_M7_VS_Generic
 Mcu.Pin72=VP_SYS_VS_Systick
 Mcu.Pin73=VP_SYS_M4_VS_Systick
 Mcu.Pin74=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin75=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PC1
 Mcu.Pin9=PC2_C
-Mcu.PinsNb=75
+Mcu.PinsNb=76
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745BITx
@@ -149,6 +151,7 @@ NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -563,7 +566,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true-CortexM7,4-MX_ETH_Init-ETH-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,7-MX_SPI3_Init-SPI3-false-HAL-true-CortexM7,8-MX_UART5_Init-UART5-false-HAL-true-CortexM7,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,10-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,11-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,12-MX_ADC2_Init-ADC2-false-HAL-true-CortexM7,13-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,14-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,1-MX_ETH_Init-ETH-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true-CortexM7,4-MX_ETH_Init-ETH-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,7-MX_SPI3_Init-SPI3-false-HAL-true-CortexM7,8-MX_UART5_Init-UART5-false-HAL-true-CortexM7,9-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,11-MX_ADC2_Init-ADC2-false-HAL-true-CortexM7,12-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,13-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,14-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,1-MX_ETH_Init-ETH-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=255
 QUADSPI.FlashSize=25
 QUADSPI.IPParameters=FlashSize,ClockPrescaler
@@ -692,6 +695,10 @@ TIM3.Pulse-PWM\ Generation1\ CH1=0
 TIM3.Pulse-PWM\ Generation2\ CH2=0
 TIM3.Pulse-PWM\ Generation3\ CH3=0
 TIM3.Pulse-PWM\ Generation4\ CH4=0
+USB_DEVICE_M7.CLASS_NAME_FS=CDC
+USB_DEVICE_M7.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE_M7.VirtualMode-CDC_FS=Cdc
+USB_DEVICE_M7.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_M7_VS_Generic.Mode=User_defined
@@ -702,5 +709,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
