--- a/BoardTest.ioc
+++ b/BoardTest.ioc
@@ -19,21 +19,56 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.IPParameters=default_mode_Activation
+CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x30020000
+CORTEX_M7.BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=0x30040000
+CORTEX_M7.DisableExec_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_INSTRUCTION_ACCESS_DISABLE
+CORTEX_M7.DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_INSTRUCTION_ACCESS_DISABLE
+CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7.IPParameters=default_mode_Activation,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S
+CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_BUFFERABLE
+CORTEX_M7.IsShareable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_SHAREABLE
+CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZE_128KB
+CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_SIZE_512B
+CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7.default_mode_Activation=1
-CortexM4.IPs=BDMA,CORTEX_M4\:I,DMA,FATFS_M4\:I,FREERTOS_M4\:I,GPIO,IWDG2\:I,MDMA,NVIC2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DEBUG,ETH
-CortexM7.IPs=BDMA\:I,CORTEX_M7\:I,DMA\:I,FATFS_M7\:I,FREERTOS_M7\:I,GPIO\:I,IWDG1\:I,MDMA\:I,NVIC1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DEBUG\:I,SDMMC2\:I,ETH\:I,QUADSPI\:I,USB_OTG_FS\:I,I2C1\:I,SPI3\:I,UART5\:I,TIM3\:I,ADC1\:I,ADC2\:I,DAC1\:I
+CortexM4.IPs=BDMA,CORTEX_M4\:I,DMA,FATFS_M4\:I,FREERTOS_M4\:I,GPIO,IWDG2\:I,MDMA,NVIC2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DEBUG,ETH,LWIP
+CortexM7.IPs=BDMA\:I,CORTEX_M7\:I,DMA\:I,FATFS_M7\:I,FREERTOS_M7\:I,GPIO\:I,IWDG1\:I,MDMA\:I,NVIC1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DEBUG\:I,SDMMC2\:I,QUADSPI\:I,USB_OTG_FS\:I,I2C1\:I,SPI3\:I,UART5\:I,TIM3\:I,ADC1\:I,ADC2\:I,DAC1\:I,LWIP\:I,ETH\:I
 CortexM7.Pins=PE8,PE9,PE10,PE11,PE12,PE13,PE14,PE15,PD8,PK0,PK1,PK2,PG2,PG3,PG4,PG7,PG8,PG15
 DAC1.DAC_Channel-DAC_OUT1_ExtAndInt=DAC_CHANNEL_1
 DAC1.DAC_Channel-DAC_OUT2_ExtAndInt=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT1_ExtAndInt,DAC_Channel-DAC_OUT2_ExtAndInt
-ETH.IPParameters=MediaInterface
+ETH.IPParameters=MediaInterface,TxDescAddress,RxDescAddress,RxBufferAddress
 ETH.MediaInterface=HAL_ETH_MII_MODE
+ETH.RxBufferAddress=0x30000100
+ETH.RxDescAddress=0x30000000
+ETH.TxDescAddress=0x30000080
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x307075B1
 KeepUserPlacement=false
+LWIP.BSP.number=1
+LWIP.GATEWAY_ADDRESS=192.168.069.001
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER
+LWIP.IP_ADDRESS=192.168.069.123
+LWIP.LWIP_DHCP=0
+LWIP.LWIP_RAM_HEAP_POINTER=0x30020000
+LWIP.MEM_SIZE=131048
+LWIP.NETMASK_ADDRESS=255.255.255.000
+LWIP.Version=v2.1.2_Cube
+LWIP0.BSP.STBoard=false
+LWIP0.BSP.api=BSP_COMPONENT_DRIVER
+LWIP0.BSP.component=LAN8742
+LWIP0.BSP.condition=
+LWIP0.BSP.instance=LAN8742
+LWIP0.BSP.ip=
+LWIP0.BSP.mode=
+LWIP0.BSP.name=Driver_PHY
+LWIP0.BSP.semaphore=S_LAN8742
+LWIP0.BSP.solution=LAN8742
 Mcu.CPN=STM32H745BIT6
 Mcu.Context0=CortexM7
 Mcu.Context1=CortexM4
@@ -41,26 +76,27 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=NVIC2
-Mcu.IP11=QUADSPI
-Mcu.IP12=RCC
-Mcu.IP13=SDMMC2
-Mcu.IP14=SPI3
-Mcu.IP15=SYS_M4
-Mcu.IP16=SYS
-Mcu.IP17=TIM3
-Mcu.IP18=UART5
-Mcu.IP19=USB_DEVICE_M7
+Mcu.IP10=NVIC1
+Mcu.IP11=NVIC2
+Mcu.IP12=QUADSPI
+Mcu.IP13=RCC
+Mcu.IP14=SDMMC2
+Mcu.IP15=SPI3
+Mcu.IP16=SYS_M4
+Mcu.IP17=SYS
+Mcu.IP18=TIM3
+Mcu.IP19=UART5
 Mcu.IP2=CORTEX_M4
-Mcu.IP20=USB_OTG_FS
+Mcu.IP20=USB_DEVICE_M7
+Mcu.IP21=USB_OTG_FS
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DAC1
 Mcu.IP5=DEBUG
 Mcu.IP6=ETH
 Mcu.IP7=FATFS_M7
 Mcu.IP8=I2C1
-Mcu.IP9=NVIC1
-Mcu.IPNb=21
+Mcu.IP9=LWIP
+Mcu.IPNb=22
 Mcu.Name=STM32H745BITx
 Mcu.Package=LQFP208
 Mcu.Pin0=PI10
@@ -133,13 +169,14 @@ Mcu.Pin69=PB7
 Mcu.Pin7=PH1-OSC_OUT (PH1)
 Mcu.Pin70=PB8
 Mcu.Pin71=VP_FATFS_M7_VS_Generic
-Mcu.Pin72=VP_SYS_VS_Systick
-Mcu.Pin73=VP_SYS_M4_VS_Systick
-Mcu.Pin74=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin75=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
+Mcu.Pin72=VP_LWIP_VS_Enabled
+Mcu.Pin73=VP_SYS_VS_Systick
+Mcu.Pin74=VP_SYS_M4_VS_Systick
+Mcu.Pin75=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin76=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PC1
 Mcu.Pin9=PC2_C
-Mcu.PinsNb=76
+Mcu.PinsNb=77
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745BITx
@@ -566,7 +603,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true-CortexM7,4-MX_ETH_Init-ETH-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,7-MX_SPI3_Init-SPI3-false-HAL-true-CortexM7,8-MX_UART5_Init-UART5-false-HAL-true-CortexM7,9-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,11-MX_ADC2_Init-ADC2-false-HAL-true-CortexM7,12-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,13-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,14-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,1-MX_ETH_Init-ETH-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true-CortexM7,4-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,5-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,6-MX_SPI3_Init-SPI3-false-HAL-true-CortexM7,7-MX_UART5_Init-UART5-false-HAL-true-CortexM7,8-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,9-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,10-MX_ADC2_Init-ADC2-false-HAL-true-CortexM7,11-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,12-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,13-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,14-MX_LWIP_Init-LWIP-false-HAL-false-CortexM7,1-MX_LWIP_Init-LWIP-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=255
 QUADSPI.FlashSize=25
 QUADSPI.IPParameters=FlashSize,ClockPrescaler
@@ -605,7 +642,8 @@ RCC.DIVP3Freq_Value=480000000
 RCC.DIVQ1=5
 RCC.DIVQ1Freq_Value=192000000
 RCC.DIVQ2Freq_Value=480000000
-RCC.DIVQ3Freq_Value=480000000
+RCC.DIVQ3=20
+RCC.DIVQ3Freq_Value=48000000
 RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2Freq_Value=480000000
 RCC.DIVR3Freq_Value=480000000
@@ -619,7 +657,7 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=16000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CKPERSourceSelection,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range-AdvancedSettings,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CKPERSourceSelection,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range-AdvancedSettings,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -654,7 +692,7 @@ RCC.Tim2OutputFreq_Value=240000000
 RCC.TraceFreq_Value=480000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
-RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=960000000
@@ -703,6 +741,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_M7_VS_Generic.Mode=User_defined
 VP_FATFS_M7_VS_Generic.Signal=FATFS_M7_VS_Generic
+VP_LWIP_VS_Enabled.Mode=Enabled
+VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_M4_VS_Systick.Mode=SysTick
 VP_SYS_M4_VS_Systick.Signal=SYS_M4_VS_Systick
 VP_SYS_VS_Systick.Mode=SysTick
